header-section-done

--- a/images/index.html
+++ b/images/index.html
@@ -3,60 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mission-2025-figma</title>
-    <link rel="stylesheet" href="style.css">
+    <title>mission 2025</title>
+    <!-- stylesheets -->
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="header-section">
-      <div class="left-content half-width">
-        <div class="border">
-            <h1>Stay Focused on <span>Mission 2025 </span> </h1>
-        </div>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet, veniam! Eos deserunt tempore iste necessitatibus! Ipsum optio 
-        </p>
-        <a href="#">Explore Now</a>
-        <br>
-        <br>
-        <br>
-        <br>
-
-        <p>
-            scroll down to explore more about us
-        </p>
-      </div>
-      <div class="right-content half-width">
-        <img src="my-photo/pic-001.png" alt="Developer Photo" />
-      </div>
-    </header>
-
- <section class="two">
-       <div class="headline">
-        <h1>My mission in 2025</h1>
-    </div> 
-    <div class="images">
-        <div class="pic-add">
-            <img src="illustrators/illustrator-1.png" alt="illustrators">
-            <div class="image-text">
-                <h2>Mission</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus autem, sit cum rerum dignissimos maiores quae error minima ut. Ex.</p>
+    <!-- Header section -->
+    <header>
+        <div class="container flexable-contant">
+         <div class="half-width left-site">
+            <h1>Stay Focused on <br> <span>Mission 2025</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas fugit officia dolore excepturi fugiat. Voluptates exercitationem modi reiciendis corporis alias.</p>
+            <div class="button">
+                <a href="#">Explore Now</a>
             </div>
-        </div>
-        <div class="pic-add">
-            <img src="illustrators/illustrator-2.png" alt="illustrators">
-            <div class="image-text">
-                <h2>Vission</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus autem, sit cum rerum dignissimos maiores quae error minima ut. Ex.</p>
-            </div>
-        </div>
-        <div class="pic-add">
-            <img src="illustrators/illustrator-3.png" alt="illustrators">
-            <div class="image-text">
-                <h2>Goals</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus autem, sit cum rerum dignissimos maiores quae error minima ut. Ex.</p>
-            </div>
-        </div>
+            <small>Scroll down to explore more about us</small>
+         </div>
+        <div class="half-width right-site">
+            <img src="my-photo/pic-001.png" alt="Developer-photo">
+         </div>
     </div>
-    </section>
+    </header>
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+    <foote></foote>
 </body>
 </html>
