mission section done

--- a/images/index.html
+++ b/images/index.html
@@ -25,7 +25,31 @@
     </div>
     </header>
     <main>
-        <section></section>
+        <!-- mission secton -->
+        <section>
+            <div class="container">
+                <div class="mission">
+                    <h1>My mission in <span>2025</span></h1>
+                    <div class="items">
+                        <div class="item" id="item-1">
+                            <img src="illustrators/illustrator-1.png" alt="">
+                            <h3>Mission</h3>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        </div>
+                        <div class="item" id="item-2">
+                            <img src="illustrators/illustrator-2.png" alt="">
+                            <h3>Mission</h3>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        </div>
+                        <div class="item" id="item-3">
+                            <img src="illustrators/illustrator-3.png" alt="">
+                            <h3>Mission</h3>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
