--- a/images/index.html
+++ b/images/index.html
@@ -50,8 +50,36 @@
                 </div>
             </div>
         </section>
-        <section></section>
-        <section></section>
+        <!-- Develop Section -->
+        <section>
+            <div class="container">
+            <div class="left">
+                <img src="pictures/coding.png" alt="">
+            </div>
+            <div class="right">
+                <h1>Develop 
+                    <br>
+                       Without Limits</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.Maiores deleniti pariatur repellendus labore eum rem id deserunt quidem nemo velit, dolorem doloribus! Unde vero soluta quasi culpa. Neque, repudiandae saepe Maiores deleniti pariatur repellendus labore eum rem id deserunt quidem nemo velit, dolorem doloribus! Unde vero soluta quasi culpa. Neque, repudiandae saepe!</p>
+                    <a href="#">Reade the Document</a>
+            </div>
+            </div>
+        </section>
+        <!-- Community section -->
+        <section>
+            <div class="container lining">
+            <div class="left">
+                <img src="pictures/project.png" alt="">
+            </div>
+            <div class="right">
+                <h1>Know our  
+                    <br>
+                    Global Community </h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.Maiores deleniti pariatur repellendus labore eum rem id deserunt quidem nemo velit, dolorem doloribus! Unde vero soluta quasi culpa. Neque, repudiandae saepe Maiores deleniti pariatur repellendus labore eum rem id deserunt quidem nemo velit, dolorem doloribus! Unde vero soluta quasi culpa. Neque, repudiandae saepe!</p>
+                    <a href="#">Read the  Documentation</a>
+            </div>
+            </div>
+        </section>
         <section></section>
     </main>
     <foote></foote>
