community section done

--- a/images/index.html
+++ b/images/index.html
@@ -80,8 +80,27 @@
             </div>
             </div>
         </section>
-        <section></section>
+        <!-- Application Section -->
+        <section>
+            <div class="container">
+            <div class="left">
+                <img src="pictures/app.png" alt="">
+            </div>
+            <div class="right">
+                <h1>Stay safe with
+                    <span> GoCorona. </span> 
+                        </h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.Maiores deleniti pariatur repellendus labore eum rem id deserunt quidem nemo velit, dolorem doloribus! Unde vero soluta quasi culpa. Neque, repudiandae saepe Maiores deleniti pariatur repellenduseum rem id deserunt quidem nemo velit, labore eum rem id deserunt quidem nemo velit, dolorem doloribus! Unde vero soluta quasi culpa. Neque, repudiandae saepe!</p>
+                    <a href="#">Reade the Document</a>
+            </div>
+            </div>
+        </section>
     </main>
-    <foote></foote>
+    <foote>
+        <div>
+            <h3>Mission 2025</h3>
+            <p>Hard work, Perseverance, and Determination for 2025</p>
+        </div>
+    </foote>
 </body>
 </html>
