--- a/images/index.html
+++ b/images/index.html
@@ -96,11 +96,11 @@
             </div>
         </section>
     </main>
-    <foote>
+    <footer>
         <div>
-            <h3>Mission 2025</h3>
+            <h3>Mission <span>2025</span></h3>
             <p>Hard work, Perseverance, and Determination for 2025</p>
         </div>
-    </foote>
+    </footer>
 </body>
 </html>
