--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h1>Develop 
                     <br>
                        Without Limits</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.Maiores deleniti pariatur repellendus labore eum rem id deserunt quidem nemo velit, dolorem doloribus! Unde vero soluta quasi culpa. Neque, repudiandae saepe Maiores deleniti pariatur repellendus labore eum rem id deserunt quidem nemo velit, dolorem doloribus! Unde vero soluta quasi culpa. Neque, repudiandae saepe!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.Maiores deleniti pariatur repellendus labore eum rem id deserunt quidem nemo velit, dolorem doloribus! Unde vero soluta quasi culpa. Neque, repudiandae saepe Maiore vero soluta quasi culpa. Neque, repudiandae saepe!</p>
                     <a href="#">Reade the Document</a>
             </div>
             </div>
@@ -71,11 +71,11 @@
             <div class="left">
                 <img src="pictures/project.png" alt="">
             </div>
-            <div class="right">
+            <div class="right margin">
                 <h1>Know our  
                     <br>
                     Global Community </h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.Maiores deleniti pariatur repellendus labore eum rem id deserunt quidem nemo velit, dolorem doloribus! Unde vero soluta quasi culpa. Neque, repudiandae saepe Maiores deleniti pariatur repellendus labore eum rem id deserunt quidem nemo velit, dolorem doloribus! Unde vero soluta quasi culpa. Neque, repudiandae saepe!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.Maiores deleniti pariatur repellendus labore eum rem id deserunt quidem nemo velit, dolorem doloribus! Unde vero soluta quasi culpa. Neque,  Unde vero soluta quasi culpa. Neque, repudiandae saepe!</p>
                     <a href="#">Read the  Documentation</a>
             </div>
             </div>
