--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <small>Scroll down to explore more about us</small>
          </div>
         <div class="half-width right-site">
-            <img src="my-photo/pic-001.png" alt="Developer-photo">
+            <img src="images/my-photo/pic-001.png" alt="Developer-photo">
          </div>
     </div>
     </header>
@@ -32,18 +32,18 @@
                     <h1>My mission in <span>2025</span></h1>
                     <div class="items">
                         <div class="item" id="item-1">
-                            <img src="illustrators/illustrator-1.png" alt="">
+                            <img src="images/illustrators/illustrator-1.png" alt="">
                             <h3>Mission</h3>
                             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                         </div>
                         <div class="item" id="item-2">
-                            <img src="illustrators/illustrator-2.png" alt="">
-                            <h3>Mission</h3>
+                            <img src="images/illustrators/illustrator-2.png" alt="">
+                            <h3>Vission</h3>
                             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                         </div>
                         <div class="item" id="item-3">
-                            <img src="illustrators/illustrator-3.png" alt="">
-                            <h3>Mission</h3>
+                            <img src="images/illustrators/illustrator-3.png" alt="">
+                            <h3>Goals</h3>
                             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                         </div>
                     </div>
@@ -54,7 +54,7 @@
         <section>
             <div class="container">
             <div class="left">
-                <img src="pictures/coding.png" alt="">
+                <img src="images/pictures/coding.png" alt="">
             </div>
             <div class="right">
                 <h1>Develop 
@@ -69,7 +69,7 @@
         <section>
             <div class="container lining">
             <div class="left">
-                <img src="pictures/project.png" alt="">
+                <img src="images/pictures/project.png" alt="">
             </div>
             <div class="right margin">
                 <h1>Know our  
@@ -84,7 +84,7 @@
         <section>
             <div class="container">
             <div class="left">
-                <img src="pictures/app.png" alt="">
+                <img src="images/pictures/app.png" alt="">
             </div>
             <div class="right">
                 <h1>Stay safe with
