--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
         </section>
         <!-- Application Section -->
         <section>
-            <div class="container">
+            <div class="middle">
+                <h1>Build <span>Corona Application</span></h1>
+            </div>
+            <div class="container last-container">
             <div class="left">
                 <img src="images/pictures/app.png" alt="">
             </div>
