--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             <div class="container last-container">
             <div class="left">
-                <img src="images/pictures/app.png" alt="">
+                <img src="images/pictures/Group 22.png" alt="">
             </div>
             <div class="right">
                 <h1>Stay safe with
