--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </section>
         <!-- Develop Section -->
-        <section>
+        <section class="bgimg">
             <div class="container">
             <div class="left">
                 <img src="images/pictures/coding.png" alt="">
@@ -66,7 +66,7 @@
             </div>
         </section>
         <!-- Community section -->
-        <section>
+        <section class="last-image">
             <div class="container lining">
             <div class="left">
                 <img src="images/pictures/project.png" alt="">
